All chapters edited to follow the same standard. Some further compressing of images has been done as well.

--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -1,6 +1,6 @@
 \section{Large Figures}\label{sec:app}
 
-\subsection{Schematic of sensorboard}
+\subsection{Schematic of sensorboard}\label{app:schemmain}
 %Image of schematic(s) (Rev 3)
 \begin{figure}[h]
 	\centering
