--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,3 +1,3 @@
 Throughout history, sailing has been a key ingredient to our civilization. Whether for trading, fishing, exploring, or transporting, today's civilization would not have been the same if sailing was not invented. Today sailing has been developed more into a hobby from large sailing boats all the way down to one-man dinghies. 
 
-The \emph{SailorAid} system was developed to help the \gls{skipper} on dinghies to make better decisions. \emph{SailorAid} can help novices \gls{skipper}s learn the ropes faster and experienced skippers perfect the skill.  This could be achieved using inexpensive sensors to give the \gls{skipper} feedback using graphics, sound, and vibrations through an Android phone application. Measurements were done on forces exerted on the centerboard, tilt of the dinghy, position, and velocity. The design was focused on being energy efficient, waterproof and easy to handle.
+The \project~system was developed to help the \gls{skipper} on dinghies to make better decisions. \project~ can help novices \gls{skipper}s learn the ropes faster and experienced skippers perfect the skill.  This could be achieved using inexpensive sensors to give the \gls{skipper} feedback using graphics, sound, and vibrations through an Android phone application. Measurements were done on forces exerted on the centerboard, tilt of the dinghy, position, and velocity. The design was focused on being energy efficient, waterproof and easy to handle.
