--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -18,6 +18,14 @@ first={Application Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{ap
 description={Two cells in Series}, 
 first={Two cells in series (2S)\glsadd{2sg}}, see=[Glossary:]{2sg}}
 
+%%% TOF
+\newglossaryentry{tofg}{name={ToF},
+    description={Time of Flight (TOF) is a property of an object, particle, electromagnetic or other wave. It is the time that such an object needs to travel a distance through a medium. The measurement of this time (i.e. the time of flight) can be used for a time standard as a way to measure velocity or path length through a given medium}}
+\newglossaryentry{tof}{type=\acronymtype, name={ToF}, 
+description={Time of Flight}, 
+first={Time of Flight (TOF)\glsadd{tofg}}, see=[Glossary:]{tofg}}
+
+
 %%% skipper
 \newglossaryentry{skipperg}{name={skipper},
     description={A skipper is a person who has command of a boat or seacraft or tug.}}
@@ -238,6 +246,13 @@ first={Bluetooth (BT)\glsadd{btg}}, see=[Glossary:]{btg}}
 \newglossaryentry{led}{type=\acronymtype, name={LED}, 
 description={Light-emitting diode}, 
 first={Light-emitting diode (LED)\glsadd{ledg}}, see=[Glossary:]{ledg}}
+
+%%% GPIO
+\newglossaryentry{gpiog}{name={GPIO},
+    description={General Purpose Input Output (GPIO), is a general use port of an \gls{mcu}}}
+\newglossaryentry{gpio}{type=\acronymtype, name={GPIO}, 
+description={General Purpose Input Output}, 
+first={General Purpose Input Output (GPIO)\glsadd{gpiog}}, see=[Glossary:]{gpiog}}
 
 %%% SPI
 \newglossaryentry{spig}{name={SPI},
