--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -31,7 +31,7 @@ The primary functional goals are the following:
 	\item Design a force measurement circuit for the centerboard
 	\begin{itemize}[noitemsep]
 %		Rephrase item 1, "off the centerboard" might be ambiguous. Intent: "off" as in "not mounted on" but that feels clumsy. But "not mounted on" might work if it has been made clear earlier why we can't put it on the centerboard.
-		\item Design an appropriate sensor mount off the centerboard
+		\item Design an appropriate mechanical externally mounted sensor
 		\item Implement an appropriate sensor
 		\item Implement a centerboard-depth sensor
 	\end{itemize}
