--- a/report/references.tex
+++ b/report/references.tex
@@ -4,7 +4,7 @@
 
 % Reference to casing cad software missing
 \bibitem{cad}
-INSERT TEXT HERE
+https://www.autodesk.com/products/fusion-360/overview
 \bibitem{bqStudio}
 Battery Management Studio (bqStudio) offers a full suite of robust tools to assist with the process of evaluating, designing with, configuring, testing, or otherwise utilizing TI Battery management products. \url{http://www.ti.com/tool/bqstudio}
 \bibitem{stm32cubemx}
@@ -75,7 +75,9 @@ Battery Management Studio (bqStudio) offers a full suite of robust tools to assi
   \url{https://developer.android.com/reference/android/speech/tts/UtteranceProgressListener.html}
 \bibitem{gmaps}
   \url{https://developers.google.com/maps/}
-
+\bibitem{Tof_cover}
+	\gls{st}, Spplication note: AN4907, \emph{VL53L0X ranging module cover window guidelines},
+	\url{http://www.st.com/content/ccc/resource/technical/document/application_note/group0/9d/93/be/33/13/be/46/19/DM00326504/files/DM00326504.pdf/jcr:content/translations/en.DM00326504.pdf}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
@@ -101,7 +103,9 @@ Noureldin ., Karamat T.B., Georgy J. (2013)\texttt{ Basic Navigational Mathemati
 	Power Guy, \emph{Constant Current Constant voltage}, May 26, 2016, San Diego, USA,
   \url{https://www.us.tdk-lambda.com/media/292143/tdk-lambda-blog-052616.pdf}
 \bibitem{UoC}
-  \url{https://edg.uchicago.edu/tutorials/load_cell/}
+	\url{https://edg.uchicago.edu/tutorials/load_cell/}
+\bibitem{load_cell}
+	\url{http://www.te.com/commerce/DocumentDelivery/DDEController?Action=srchrtrv&DocNm=FX19&DocType=DS&DocLang=English}
 \bibitem{animal}
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of
